--- a/package.json
+++ b/package.json
@@ -20,19 +20,21 @@
     "react-router": "^7.6.3",
     "react-simple-typewriter": "^5.0.1",
     "reactive-button": "^1.3.15",
-    "sweetalert2": "^11.22.2",
-    "tailwindcss": "^4.1.11"
+    "sweetalert2": "^11.22.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
+    "autoprefixer": "^10.4.14",
     "daisyui": "^5.0.43",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^4.1.11",
     "vite": "^7.0.0"
   }
 }
